  variables.
#1042672 by fietserwin, BrankoC: hook_help: do not translate texts if not
  necessary.
#3060997 by solideogloria, BrankoC: Improve Performance of Schedule Calculation.
#3064783 by BrankoC, DamienMcKenna: Uninstalling this module leaves variable
  backup_migrate_schedule_last_run_* intact.
#3051821 by DamienMcKenna, BrankoC, solideogloria, wylbur: Remove NodeSquirrel
  integration.


Backup and Migrate 7.x-3.6, 2018-12-15
--------------------------------------
#2293601 by KimNyholm, fastturtle: Errors shown because directory handles are
  not closed when no longer needed.
#2937023 by DamienMcKenna: Add a test for the basic UI functionality.
#2945704 by DamienMcKenna: Write tests for each backup filename option.
#2939277 by DamienMcKenna, baronmunchowsen: File mode change on
  sources.archivesource.inc.
#2935403 by DamienMcKenna, jacob.embree: Improve coding standards compliance.
#2962822 by laryn: Spelling mistake: "frequecy".
#2917959 by DamienMcKenna: Updated backup_migrate_update_7305() to fix schema
  problems.
#2996191 by mwnciau, DamienMcKenna: Special characters in database password
  causes PHP notifications.
#2949211 by gturnbull, DamienMcKenna, Alex Bukach, Eli.Stone, joelpittet:
  Optional memory limit setting to work around out-of-memory errors during
  backups.
#2494757 by pbuyle, DamienMcKenna, Ives, Calystod: Allow running a scheduled
  backup with Drush.
#2404113 by DamienMcKenna, John Cook, danharper, salmino: Different host for
  AWS type server.
#2829492 by axel.rutz, RickJ, DamienMcKenna, devad, Kris77, pietrocap,
  couturier: Big file backup breaks with "MySQL server has gone away".
#3001702 by DamienMcKenna: Code cleanup on 7.x-3.x branch.
#2831470 by snehal.addweb, bfodeke, jigish.addweb: Delete query in
  hook_uninstall() can potentially remove unintended variables.
#3004759 by Manthan.addweb, echoz: Notice: Undefined index: exclude_filepaths...
  visiting Advanced Backup tab.