@@ -42,3 +42,4 @@ files[] = tests/BmTestBase.test
 files[] = tests/BmTestBasics.test
 files[] = tests/BmTestProfiles.test
 files[] = tests/BmTestEmail.test
+files[] = tests/BmTestCtools.test
