@@ -935,6 +935,23 @@ class backup_migrate_item {
     // Allow other modules to declare destinations programatically.
     $default_items = module_invoke_all($this->db_table);
 
+    // Get CTools exported versions.
+    if (function_exists('ctools_include')) {
+      ctools_include('export');
+      $defaults = ctools_export_load_object($this->db_table);
+      foreach ($defaults as $info) {
+        $info = (array) $info;
+        if (!empty($info) && $item = $this->create($info)) {
+          // If this item is not already in $default_items,
+          // set flag to indicate it's only there because of ctools export.
+          if (empty($default_items[$item->get_id()])) {
+            $item->settings['ctools_export'] = TRUE;
+          }
+          $default_items[$item->get_id()] = $item;
+        }
+      }
+    }
+
     // Get any items stored as a variable again to correctly mark overrides.
     $defaults = (array) variable_get($this->db_table . '_defaults', array());
     foreach ($defaults as $info) {
@@ -947,7 +964,10 @@ class backup_migrate_item {
     // already been overridden.
     foreach ($default_items as $item) {
       if (isset($items[$item->get_id()])) {
-        $items[$item->get_id()]->storage = BACKUP_MIGRATE_STORAGE_OVERRIDEN;
+        // Items added by ctools export are not overrides.
+        if (empty($item->settings['ctools_export'])) {
+          $items[$item->get_id()]->storage = BACKUP_MIGRATE_STORAGE_OVERRIDEN;
+        }
       }
       else {
         $item->storage = BACKUP_MIGRATE_STORAGE_NONE;
