@@ -31,6 +31,8 @@ Backup and Migrate 7.x-3.x-dev, xxxx-xx-xx
   backup_migrate_schedule_last_run_* intact.
 #3051821 by DamienMcKenna, BrankoC, solideogloria, wylbur: Remove NodeSquirrel
   integration.
+#3033583 by BrankoC, DamienMcKenna, m.stenta, RickJ, wylbur: CTools exportables
+  code no longer loading.
 
 
 Backup and Migrate 7.x-3.6, 2018-12-15
